fix menu overflow, increase list elements space

--- a/app/assets/stylesheets/spree/frontend/components/pages/_mobile_header.scss
+++ b/app/assets/stylesheets/spree/frontend/components/pages/_mobile_header.scss
@@ -22,13 +22,14 @@
   li {
     font-size: 18px;
     min-height: 34px;
+    margin-bottom: 4px;
   }
   
   .sub__menu {
     display: none;
     flex-flow: column nowrap;
     list-style-type: none;
-    width: max-content;
+    
 
     &__toggle {
       font-size: 24px;
